--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-HOST=0.0.0.0
+HOST=43.204.89.74
 PORT=1337
-APP_KEYS=
+APP_KEYS=vEQkRCHQ5Bk8SI7xp0suhA==,KaYnCzay7kAG0QsKDXCkVA==,226uSePmRX5Cv15d0J+3kw==,HJlO3jRWJbP2I3xJAXye9A==
