--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,9 @@
 name: GitHub Actions Demo
-on: [push]
+on:
+push:
+    branches:
+    - test
+    - release/*
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
