--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,23 +1,17 @@
-name: CI
+name: sampleworkflow CI
 
 on:
   push:
-    branches:
-    - master
-    - release/*
+    branches: test
+  pull_request:
+    branches: master
 
 jobs:
-  firebase-deploy:
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
-    - uses: actions/setup-node@master
-      with:
-        node-version: '10.x'
-    - run: npm install
-    - run: npm run build:prod
-    - uses: w9jds/firebase-action@master
-      with:
-        args: deploy --only hosting
+      - uses: actions/checkout@v3
+
+      - name: Run a one-line script
+        run: echo Hello from sampleworkflow
